parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> globales funciones programa_end
Rule 2     programa -> funciones programa_end
Rule 3     programa_end -> empty
Rule 4     funciones -> funciones_2 main
Rule 5     funciones_2 -> funcion funciones_2
Rule 6     funciones_2 -> empty
Rule 7     globales -> global_1 vars globales_2
Rule 8     globales_2 -> global_1 vars globales_2
Rule 9     globales_2 -> empty
Rule 10    global_1 -> GLOBAL
Rule 11    bloque -> estatuto bloque
Rule 12    bloque -> empty
Rule 13    data_type -> INT
Rule 14    data_type -> FLOAT
Rule 15    data_type -> BOOLEAN
Rule 16    data_type_func -> INT
Rule 17    data_type_func -> FLOAT
Rule 18    data_type_func -> BOOLEAN
Rule 19    data_type_func -> VOID
Rule 20    main -> main_1 bloque END
Rule 21    main_1 -> MAIN LPAREN RPAREN
Rule 22    estatuto -> asignacion
Rule 23    estatuto -> condicion
Rule 24    estatuto -> ciclo
Rule 25    estatuto -> accion
Rule 26    estatuto -> vars
Rule 27    estatuto -> llamada SEMICOLON
Rule 28    asignacion -> asignacion_id asignacion_2 SEMICOLON
Rule 29    asignacion_id -> ID
Rule 30    asignacion_2 -> asignacion_equal super_exp
Rule 31    asignacion_2 -> LBRACKET exp asignacion_3 EQUAL super_exp
Rule 32    asignacion_equal -> EQUAL
Rule 33    asignacion_3 -> RBRACKET
Rule 34    asignacion_3 -> COMMA exp RBRACKET
Rule 35    vars -> DRAW ID EQUAL NEWDRAW LPAREN RPAREN SEMICOLON
Rule 36    vars -> vars_id vars2
Rule 37    vars -> vars_aux
Rule 38    vars_id -> data_type ID
Rule 39    vars_aux -> array ID vars3
Rule 40    array -> ARRAY LESS data_type COMMA CTE_I array_2 GREATER
Rule 41    array_2 -> COMMA CTE_I
Rule 42    array_2 -> empty
Rule 43    vars2 -> asignacion_equal super_exp SEMICOLON
Rule 44    vars2 -> SEMICOLON
Rule 45    vars3 -> EQUAL def_array SEMICOLON
Rule 46    vars3 -> SEMICOLON
Rule 47    llamada -> llamada_id LPAREN llamada_2
Rule 48    llamada_id -> ID
Rule 49    llamada_2 -> llamada_exp RPAREN
Rule 50    llamada_2 -> RPAREN
Rule 51    llamada_exp -> super_exp llamada_exp2
Rule 52    llamada_exp2 -> COMMA llamada_exp
Rule 53    llamada_exp2 -> empty
Rule 54    def_array -> LBRACKET def_array_2
Rule 55    def_array_2 -> def_array_cte RBRACKET
Rule 56    def_array_2 -> RBRACKET
Rule 57    def_array_cte -> var_cte def_array_cte_2
Rule 58    def_array_cte_2 -> COMMA def_array_cte
Rule 59    def_array_cte_2 -> empty
Rule 60    super_exp -> expresion super_exp_2
Rule 61    super_exp_2 -> logicop super_exp_2
Rule 62    super_exp_2 -> empty
Rule 63    expresion -> exp expresion_2
Rule 64    expresion_2 -> relop exp
Rule 65    expresion_2 -> empty
Rule 66    relop -> GREATER
Rule 67    relop -> GREATEREQUAL
Rule 68    relop -> LESS
Rule 69    relop -> LESSEQUAL
Rule 70    relop -> DEQUAL
Rule 71    relop -> DISTINT
Rule 72    exp -> termino exp_2
Rule 73    exp_2 -> addop exp
Rule 74    exp_2 -> empty
Rule 75    termino -> factor termino_2
Rule 76    termino_2 -> timesop termino
Rule 77    termino_2 -> empty
Rule 78    var_cte -> var_cte_1
Rule 79    var_cte -> var_cte_i
Rule 80    var_cte -> var_cte_f
Rule 81    var_cte -> var_cte_b
Rule 82    var_cte -> llamada
Rule 83    var_cte_i -> CTE_I
Rule 84    var_cte_f -> CTE_F
Rule 85    var_cte_b -> TRUE
Rule 86    var_cte_b -> FALSE
Rule 87    var_cte_1 -> ID var_cte_2
Rule 88    var_cte_2 -> LBRACKET exp var_cte_3
Rule 89    var_cte_2 -> empty
Rule 90    var_cte_3 -> RBRACKET
Rule 91    var_cte_3 -> COMMA exp RBRACKET
Rule 92    factor -> lparen_factor super_exp rparen_factor
Rule 93    factor -> addop var_cte
Rule 94    factor -> var_cte
Rule 95    lparen_factor -> LPAREN
Rule 96    rparen_factor -> RPAREN
Rule 97    condicion -> condicion_id LPAREN super_exp rparen_condicion bloque condicion_2
Rule 98    rparen_condicion -> RPAREN
Rule 99    condicion_id -> IF
Rule 100   condicion_2 -> condicion_end
Rule 101   condicion_2 -> condicion_else bloque condicion_end
Rule 102   condicion_else -> ELSE
Rule 103   condicion_end -> END
Rule 104   ciclo -> for
Rule 105   ciclo -> while
Rule 106   accion -> ID POINT accion_nombre accion_params SEMICOLON
Rule 107   accion_params -> LPAREN accion_params_2
Rule 108   accion_params_2 -> accion_params_cte RPAREN
Rule 109   accion_params_2 -> RPAREN
Rule 110   accion_params_cte -> var_cte accion_params_cte_2
Rule 111   accion_params_cte_2 -> COMMA accion_params_cte
Rule 112   accion_params_cte_2 -> empty
Rule 113   accion_nombre -> SETPOSITION
Rule 114   accion_nombre -> CIRCLE
Rule 115   accion_nombre -> RIGHT
Rule 116   accion_nombre -> LEFT
Rule 117   accion_nombre -> HIDE
Rule 118   accion_nombre -> SQUARE
Rule 119   accion_nombre -> CLEAR
Rule 120   accion_nombre -> SHOW
Rule 121   accion_nombre -> BACK
Rule 122   accion_nombre -> SPEED
Rule 123   accion_nombre -> FORWARD
Rule 124   accion_nombre -> SETCOLOR
Rule 125   for -> for_init LPAREN for_exp COMMA for_exp COMMA for_exp2 for_rparen bloque for_end
Rule 126   for_exp -> exp
Rule 127   for_exp2 -> exp
Rule 128   for_rparen -> RPAREN
Rule 129   for_init -> FOR
Rule 130   for_end -> END
Rule 131   while -> while_init LPAREN super_exp rparen_while bloque while_end
Rule 132   while_init -> WHILE
Rule 133   rparen_while -> RPAREN
Rule 134   while_end -> END
Rule 135   funcion -> funcion_1 var_local bloque funcion_2
Rule 136   funcion_1 -> DEF data_type_func ID
Rule 137   funcion_2 -> RETURN super_exp SEMICOLON funcion_end
Rule 138   funcion_2 -> funcion_end
Rule 139   funcion_end -> END
Rule 140   var_local -> LPAREN var_local_2 RPAREN
Rule 141   var_local_2 -> var_local_2_1 var_local_3
Rule 142   var_local_2 -> empty
Rule 143   var_local_2_1 -> data_type ID
Rule 144   var_local_3 -> COMMA var_local_2
Rule 145   var_local_3 -> empty
Rule 146   addop -> PLUS
Rule 147   addop -> MINUS
Rule 148   timesop -> TIMES
Rule 149   timesop -> DIVIDE
Rule 150   timesop -> PERCENT
Rule 151   logicop -> AND
Rule 152   logicop -> OR
Rule 153   empty -> <empty>

Terminals, with rules where they appear

AND                  : 151
ARRAY                : 40
BACK                 : 121
BOOLEAN              : 15 18
CIRCLE               : 114
CLEAR                : 119
COMMA                : 34 40 41 52 58 91 111 125 125 144
CTE_F                : 84
CTE_I                : 40 41 83
DEF                  : 136
DEQUAL               : 70
DISTINT              : 71
DIVIDE               : 149
DRAW                 : 35
ELSE                 : 102
END                  : 20 103 130 134 139
EQUAL                : 31 32 35 45
FALSE                : 86
FLOAT                : 14 17
FOR                  : 129
FORWARD              : 123
GLOBAL               : 10
GREATER              : 40 66
GREATEREQUAL         : 67
HIDE                 : 117
ID                   : 29 35 38 39 48 87 106 136 143
IF                   : 99
INT                  : 13 16
LBRACKET             : 31 54 88
LEFT                 : 116
LESS                 : 40 68
LESSEQUAL            : 69
LPAREN               : 21 35 47 95 97 107 125 131 140
MAIN                 : 21
MINUS                : 147
NEWDRAW              : 35
OR                   : 152
PERCENT              : 150
PLUS                 : 146
POINT                : 106
RBRACKET             : 33 34 55 56 90 91
RETURN               : 137
RIGHT                : 115
RPAREN               : 21 35 49 50 96 98 108 109 128 133 140
SEMICOLON            : 27 28 35 43 44 45 46 106 137
SETCOLOR             : 124
SETPOSITION          : 113
SHOW                 : 120
SPEED                : 122
SQUARE               : 118
TIMES                : 148
TRUE                 : 85
VOID                 : 19
WHILE                : 132
error                : 

Nonterminals, with rules where they appear

accion               : 25
accion_nombre        : 106
accion_params        : 106
accion_params_2      : 107
accion_params_cte    : 108 111
accion_params_cte_2  : 110
addop                : 73 93
array                : 39
array_2              : 40
asignacion           : 22
asignacion_2         : 28
asignacion_3         : 31
asignacion_equal     : 30 43
asignacion_id        : 28
bloque               : 11 20 97 101 125 131 135
ciclo                : 24
condicion            : 23
condicion_2          : 97
condicion_else       : 101
condicion_end        : 100 101
condicion_id         : 97
data_type            : 38 40 143
data_type_func       : 136
def_array            : 45
def_array_2          : 54
def_array_cte        : 55 58
def_array_cte_2      : 57
empty                : 3 6 9 12 42 53 59 62 65 74 77 89 112 142 145
estatuto             : 11
exp                  : 31 34 63 64 73 88 91 126 127
exp_2                : 72
expresion            : 60
expresion_2          : 63
factor               : 75
for                  : 104
for_end              : 125
for_exp              : 125 125
for_exp2             : 125
for_init             : 125
for_rparen           : 125
funcion              : 5
funcion_1            : 135
funcion_2            : 135
funcion_end          : 137 138
funciones            : 1 2
funciones_2          : 4 5
global_1             : 7 8
globales             : 1
globales_2           : 7 8
llamada              : 27 82
llamada_2            : 47
llamada_exp          : 49 52
llamada_exp2         : 51
llamada_id           : 47
logicop              : 61
lparen_factor        : 92
main                 : 4
main_1               : 20
programa             : 0
programa_end         : 1 2
relop                : 64
rparen_condicion     : 97
rparen_factor        : 92
rparen_while         : 131
super_exp            : 30 31 43 51 92 97 131 137
super_exp_2          : 60 61
termino              : 72 76
termino_2            : 75
timesop              : 76
var_cte              : 57 93 94 110
var_cte_1            : 78
var_cte_2            : 87
var_cte_3            : 88
var_cte_b            : 81
var_cte_f            : 80
var_cte_i            : 79
var_local            : 135
var_local_2          : 140 144
var_local_2_1        : 141
var_local_3          : 141
vars                 : 7 8 26
vars2                : 36
vars3                : 39
vars_aux             : 37
vars_id              : 36
while                : 105
while_end            : 131
while_init           : 131

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . globales funciones programa_end
    (2) programa -> . funciones programa_end
    (7) globales -> . global_1 vars globales_2
    (4) funciones -> . funciones_2 main
    (10) global_1 -> . GLOBAL
    (5) funciones_2 -> . funcion funciones_2
    (6) funciones_2 -> . empty
    (135) funcion -> . funcion_1 var_local bloque funcion_2
    (153) empty -> .
    (136) funcion_1 -> . DEF data_type_func ID

    GLOBAL          shift and go to state 1
    MAIN            reduce using rule 153 (empty -> .)
    DEF             shift and go to state 7

    funcion_1                      shift and go to state 2
    globales                       shift and go to state 3
    funciones_2                    shift and go to state 4
    global_1                       shift and go to state 5
    programa                       shift and go to state 6
    funciones                      shift and go to state 8
    empty                          shift and go to state 9
    funcion                        shift and go to state 10

state 1

    (10) global_1 -> GLOBAL .

    DRAW            reduce using rule 10 (global_1 -> GLOBAL .)
    INT             reduce using rule 10 (global_1 -> GLOBAL .)
    FLOAT           reduce using rule 10 (global_1 -> GLOBAL .)
    BOOLEAN         reduce using rule 10 (global_1 -> GLOBAL .)
    ARRAY           reduce using rule 10 (global_1 -> GLOBAL .)


state 2

    (135) funcion -> funcion_1 . var_local bloque funcion_2
    (140) var_local -> . LPAREN var_local_2 RPAREN

    LPAREN          shift and go to state 12

    var_local                      shift and go to state 11

state 3

    (1) programa -> globales . funciones programa_end
    (4) funciones -> . funciones_2 main
    (5) funciones_2 -> . funcion funciones_2
    (6) funciones_2 -> . empty
    (135) funcion -> . funcion_1 var_local bloque funcion_2
    (153) empty -> .
    (136) funcion_1 -> . DEF data_type_func ID

    MAIN            reduce using rule 153 (empty -> .)
    DEF             shift and go to state 7

    funcion_1                      shift and go to state 2
    funciones                      shift and go to state 13
    funciones_2                    shift and go to state 4
    empty                          shift and go to state 9
    funcion                        shift and go to state 10

state 4

    (4) funciones -> funciones_2 . main
    (20) main -> . main_1 bloque END
    (21) main_1 -> . MAIN LPAREN RPAREN

    MAIN            shift and go to state 14

    main_1                         shift and go to state 15
    main                           shift and go to state 16

state 5

    (7) globales -> global_1 . vars globales_2
    (35) vars -> . DRAW ID EQUAL NEWDRAW LPAREN RPAREN SEMICOLON
    (36) vars -> . vars_id vars2
    (37) vars -> . vars_aux
    (38) vars_id -> . data_type ID
    (39) vars_aux -> . array ID vars3
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . BOOLEAN
    (40) array -> . ARRAY LESS data_type COMMA CTE_I array_2 GREATER

    DRAW            shift and go to state 22
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ARRAY           shift and go to state 21

    vars_id                        shift and go to state 17
    vars                           shift and go to state 18
    vars_aux                       shift and go to state 19
    data_type                      shift and go to state 23
    array                          shift and go to state 20

state 6

    (0) S' -> programa .



state 7

    (136) funcion_1 -> DEF . data_type_func ID
    (16) data_type_func -> . INT
    (17) data_type_func -> . FLOAT
    (18) data_type_func -> . BOOLEAN
    (19) data_type_func -> . VOID

    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOLEAN         shift and go to state 31
    VOID            shift and go to state 28

    data_type_func                 shift and go to state 30

state 8

    (2) programa -> funciones . programa_end
    (3) programa_end -> . empty
    (153) empty -> .

    $end            reduce using rule 153 (empty -> .)

    programa_end                   shift and go to state 32
    empty                          shift and go to state 33

state 9

    (6) funciones_2 -> empty .

    MAIN            reduce using rule 6 (funciones_2 -> empty .)


state 10

    (5) funciones_2 -> funcion . funciones_2
    (5) funciones_2 -> . funcion funciones_2
    (6) funciones_2 -> . empty
    (135) funcion -> . funcion_1 var_local bloque funcion_2
    (153) empty -> .
    (136) funcion_1 -> . DEF data_type_func ID

    MAIN            reduce using rule 153 (empty -> .)
    DEF             shift and go to state 7

    funciones_2                    shift and go to state 34
    funcion_1                      shift and go to state 2
    empty                          shift and go to state 9
    funcion                        shift and go to state 10

state 11

    (135) funcion -> funcion_1 var_local . bloque funcion_2
    (11) bloque -> . estatuto bloque
    (12) bloque -> . empty
    (22) estatuto -> . asignacion
    (23) estatuto -> . condicion
    (24) estatuto -> . ciclo
    (25) estatuto -> . accion
    (26) estatuto -> . vars
    (27) estatuto -> . llamada SEMICOLON
    (153) empty -> .
    (28) asignacion -> . asignacion_id asignacion_2 SEMICOLON
    (97) condicion -> . condicion_id LPAREN super_exp rparen_condicion bloque condicion_2
    (104) ciclo -> . for
    (105) ciclo -> . while
    (106) accion -> . ID POINT accion_nombre accion_params SEMICOLON
    (35) vars -> . DRAW ID EQUAL NEWDRAW LPAREN RPAREN SEMICOLON
    (36) vars -> . vars_id vars2
    (37) vars -> . vars_aux
    (47) llamada -> . llamada_id LPAREN llamada_2
    (29) asignacion_id -> . ID
    (99) condicion_id -> . IF
    (125) for -> . for_init LPAREN for_exp COMMA for_exp COMMA for_exp2 for_rparen bloque for_end
    (131) while -> . while_init LPAREN super_exp rparen_while bloque while_end
    (38) vars_id -> . data_type ID
    (39) vars_aux -> . array ID vars3
    (48) llamada_id -> . ID
    (129) for_init -> . FOR
    (132) while_init -> . WHILE
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . BOOLEAN
    (40) array -> . ARRAY LESS data_type COMMA CTE_I array_2 GREATER

    RETURN          reduce using rule 153 (empty -> .)
    END             reduce using rule 153 (empty -> .)
    ID              shift and go to state 47
    DRAW            shift and go to state 22
    IF              shift and go to state 45
    FOR             shift and go to state 38
    WHILE           shift and go to state 51
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ARRAY           shift and go to state 21

    asignacion_id                  shift and go to state 35
    vars_id                        shift and go to state 17
    vars                           shift and go to state 36
    for_init                       shift and go to state 37
    vars_aux                       shift and go to state 19
    bloque                         shift and go to state 39
    ciclo                          shift and go to state 40
    for                            shift and go to state 49
    estatuto                       shift and go to state 41
    llamada                        shift and go to state 42
    condicion                      shift and go to state 43
    while_init                     shift and go to state 44
    empty                          shift and go to state 46
    data_type                      shift and go to state 23
    accion                         shift and go to state 48
    asignacion                     shift and go to state 50
    array                          shift and go to state 20
    while                          shift and go to state 52
    llamada_id                     shift and go to state 53
    condicion_id                   shift and go to state 54

state 12

    (140) var_local -> LPAREN . var_local_2 RPAREN
    (141) var_local_2 -> . var_local_2_1 var_local_3
    (142) var_local_2 -> . empty
    (143) var_local_2_1 -> . data_type ID
    (153) empty -> .
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . BOOLEAN

    RPAREN          reduce using rule 153 (empty -> .)
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26

    var_local_2_1                  shift and go to state 57
    var_local_2                    shift and go to state 56
    data_type                      shift and go to state 55
    empty                          shift and go to state 58

state 13

    (1) programa -> globales funciones . programa_end
    (3) programa_end -> . empty
    (153) empty -> .

    $end            reduce using rule 153 (empty -> .)

    programa_end                   shift and go to state 59
    empty                          shift and go to state 33

state 14

    (21) main_1 -> MAIN . LPAREN RPAREN

    LPAREN          shift and go to state 60


state 15

    (20) main -> main_1 . bloque END
    (11) bloque -> . estatuto bloque
    (12) bloque -> . empty
    (22) estatuto -> . asignacion
    (23) estatuto -> . condicion
    (24) estatuto -> . ciclo
    (25) estatuto -> . accion
    (26) estatuto -> . vars
    (27) estatuto -> . llamada SEMICOLON
    (153) empty -> .
    (28) asignacion -> . asignacion_id asignacion_2 SEMICOLON
    (97) condicion -> . condicion_id LPAREN super_exp rparen_condicion bloque condicion_2
    (104) ciclo -> . for
    (105) ciclo -> . while
    (106) accion -> . ID POINT accion_nombre accion_params SEMICOLON
    (35) vars -> . DRAW ID EQUAL NEWDRAW LPAREN RPAREN SEMICOLON
    (36) vars -> . vars_id vars2
    (37) vars -> . vars_aux
    (47) llamada -> . llamada_id LPAREN llamada_2
    (29) asignacion_id -> . ID
    (99) condicion_id -> . IF
    (125) for -> . for_init LPAREN for_exp COMMA for_exp COMMA for_exp2 for_rparen bloque for_end
    (131) while -> . while_init LPAREN super_exp rparen_while bloque while_end
    (38) vars_id -> . data_type ID
    (39) vars_aux -> . array ID vars3
    (48) llamada_id -> . ID
    (129) for_init -> . FOR
    (132) while_init -> . WHILE
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . BOOLEAN
    (40) array -> . ARRAY LESS data_type COMMA CTE_I array_2 GREATER

    END             reduce using rule 153 (empty -> .)
    ID              shift and go to state 47
    DRAW            shift and go to state 22
    IF              shift and go to state 45
    FOR             shift and go to state 38
    WHILE           shift and go to state 51
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ARRAY           shift and go to state 21

    asignacion_id                  shift and go to state 35
    vars_id                        shift and go to state 17
    vars                           shift and go to state 36
    for_init                       shift and go to state 37
    vars_aux                       shift and go to state 19
    bloque                         shift and go to state 61
    array                          shift and go to state 20
    ciclo                          shift and go to state 40
    for                            shift and go to state 49
    estatuto                       shift and go to state 41
    llamada                        shift and go to state 42
    condicion                      shift and go to state 43
    while_init                     shift and go to state 44
    empty                          shift and go to state 46
    data_type                      shift and go to state 23
    accion                         shift and go to state 48
    asignacion                     shift and go to state 50
    while                          shift and go to state 52
    llamada_id                     shift and go to state 53
    condicion_id                   shift and go to state 54

state 16

    (4) funciones -> funciones_2 main .

    $end            reduce using rule 4 (funciones -> funciones_2 main .)


state 17

    (36) vars -> vars_id . vars2
    (43) vars2 -> . asignacion_equal super_exp SEMICOLON
    (44) vars2 -> . SEMICOLON
    (32) asignacion_equal -> . EQUAL

    SEMICOLON       shift and go to state 62
    EQUAL           shift and go to state 63

    vars2                          shift and go to state 64
    asignacion_equal               shift and go to state 65

state 18

    (7) globales -> global_1 vars . globales_2
    (8) globales_2 -> . global_1 vars globales_2
    (9) globales_2 -> . empty
    (10) global_1 -> . GLOBAL
    (153) empty -> .

    GLOBAL          shift and go to state 1
    DEF             reduce using rule 153 (empty -> .)
    MAIN            reduce using rule 153 (empty -> .)

    globales_2                     shift and go to state 66
    global_1                       shift and go to state 67
    empty                          shift and go to state 68

state 19

    (37) vars -> vars_aux .

    ID              reduce using rule 37 (vars -> vars_aux .)
    DRAW            reduce using rule 37 (vars -> vars_aux .)
    IF              reduce using rule 37 (vars -> vars_aux .)
    FOR             reduce using rule 37 (vars -> vars_aux .)
    WHILE           reduce using rule 37 (vars -> vars_aux .)
    INT             reduce using rule 37 (vars -> vars_aux .)
    FLOAT           reduce using rule 37 (vars -> vars_aux .)
    BOOLEAN         reduce using rule 37 (vars -> vars_aux .)
    ARRAY           reduce using rule 37 (vars -> vars_aux .)
    END             reduce using rule 37 (vars -> vars_aux .)
    RETURN          reduce using rule 37 (vars -> vars_aux .)
    ELSE            reduce using rule 37 (vars -> vars_aux .)
    GLOBAL          reduce using rule 37 (vars -> vars_aux .)
    DEF             reduce using rule 37 (vars -> vars_aux .)
    MAIN            reduce using rule 37 (vars -> vars_aux .)


state 20

    (39) vars_aux -> array . ID vars3

    ID              shift and go to state 69


state 21

    (40) array -> ARRAY . LESS data_type COMMA CTE_I array_2 GREATER

    LESS            shift and go to state 70


state 22

    (35) vars -> DRAW . ID EQUAL NEWDRAW LPAREN RPAREN SEMICOLON

    ID              shift and go to state 71


state 23

    (38) vars_id -> data_type . ID

    ID              shift and go to state 72


state 24

    (13) data_type -> INT .

    ID              reduce using rule 13 (data_type -> INT .)
    COMMA           reduce using rule 13 (data_type -> INT .)


state 25

    (14) data_type -> FLOAT .

    ID              reduce using rule 14 (data_type -> FLOAT .)
    COMMA           reduce using rule 14 (data_type -> FLOAT .)


state 26

    (15) data_type -> BOOLEAN .

    ID              reduce using rule 15 (data_type -> BOOLEAN .)
    COMMA           reduce using rule 15 (data_type -> BOOLEAN .)


state 27

    (16) data_type_func -> INT .

    ID              reduce using rule 16 (data_type_func -> INT .)


state 28

    (19) data_type_func -> VOID .

    ID              reduce using rule 19 (data_type_func -> VOID .)


state 29

    (17) data_type_func -> FLOAT .

    ID              reduce using rule 17 (data_type_func -> FLOAT .)


state 30

    (136) funcion_1 -> DEF data_type_func . ID

    ID              shift and go to state 73


state 31

    (18) data_type_func -> BOOLEAN .

    ID              reduce using rule 18 (data_type_func -> BOOLEAN .)


state 32

    (2) programa -> funciones programa_end .

    $end            reduce using rule 2 (programa -> funciones programa_end .)


state 33

    (3) programa_end -> empty .

    $end            reduce using rule 3 (programa_end -> empty .)


state 34

    (5) funciones_2 -> funcion funciones_2 .

    MAIN            reduce using rule 5 (funciones_2 -> funcion funciones_2 .)


state 35

    (28) asignacion -> asignacion_id . asignacion_2 SEMICOLON
    (30) asignacion_2 -> . asignacion_equal super_exp
    (31) asignacion_2 -> . LBRACKET exp asignacion_3 EQUAL super_exp
    (32) asignacion_equal -> . EQUAL

    LBRACKET        shift and go to state 75
    EQUAL           shift and go to state 63

    asignacion_2                   shift and go to state 74
    asignacion_equal               shift and go to state 76

state 36

    (26) estatuto -> vars .

    ID              reduce using rule 26 (estatuto -> vars .)
    DRAW            reduce using rule 26 (estatuto -> vars .)
    IF              reduce using rule 26 (estatuto -> vars .)
    FOR             reduce using rule 26 (estatuto -> vars .)
    WHILE           reduce using rule 26 (estatuto -> vars .)
    INT             reduce using rule 26 (estatuto -> vars .)
    FLOAT           reduce using rule 26 (estatuto -> vars .)
    BOOLEAN         reduce using rule 26 (estatuto -> vars .)
    ARRAY           reduce using rule 26 (estatuto -> vars .)
    END             reduce using rule 26 (estatuto -> vars .)
    RETURN          reduce using rule 26 (estatuto -> vars .)
    ELSE            reduce using rule 26 (estatuto -> vars .)


state 37

    (125) for -> for_init . LPAREN for_exp COMMA for_exp COMMA for_exp2 for_rparen bloque for_end

    LPAREN          shift and go to state 77


state 38

    (129) for_init -> FOR .

    LPAREN          reduce using rule 129 (for_init -> FOR .)


state 39

    (135) funcion -> funcion_1 var_local bloque . funcion_2
    (137) funcion_2 -> . RETURN super_exp SEMICOLON funcion_end
    (138) funcion_2 -> . funcion_end
    (139) funcion_end -> . END

    RETURN          shift and go to state 78
    END             shift and go to state 80

    funcion_end                    shift and go to state 79
    funcion_2                      shift and go to state 81

state 40

    (24) estatuto -> ciclo .

    ID              reduce using rule 24 (estatuto -> ciclo .)
    DRAW            reduce using rule 24 (estatuto -> ciclo .)
    IF              reduce using rule 24 (estatuto -> ciclo .)
    FOR             reduce using rule 24 (estatuto -> ciclo .)
    WHILE           reduce using rule 24 (estatuto -> ciclo .)
    INT             reduce using rule 24 (estatuto -> ciclo .)
    FLOAT           reduce using rule 24 (estatuto -> ciclo .)
    BOOLEAN         reduce using rule 24 (estatuto -> ciclo .)
    ARRAY           reduce using rule 24 (estatuto -> ciclo .)
    END             reduce using rule 24 (estatuto -> ciclo .)
    RETURN          reduce using rule 24 (estatuto -> ciclo .)
    ELSE            reduce using rule 24 (estatuto -> ciclo .)


state 41

    (11) bloque -> estatuto . bloque
    (11) bloque -> . estatuto bloque
    (12) bloque -> . empty
    (22) estatuto -> . asignacion
    (23) estatuto -> . condicion
    (24) estatuto -> . ciclo
    (25) estatuto -> . accion
    (26) estatuto -> . vars
    (27) estatuto -> . llamada SEMICOLON
    (153) empty -> .
    (28) asignacion -> . asignacion_id asignacion_2 SEMICOLON
    (97) condicion -> . condicion_id LPAREN super_exp rparen_condicion bloque condicion_2
    (104) ciclo -> . for
    (105) ciclo -> . while
    (106) accion -> . ID POINT accion_nombre accion_params SEMICOLON
    (35) vars -> . DRAW ID EQUAL NEWDRAW LPAREN RPAREN SEMICOLON
    (36) vars -> . vars_id vars2
    (37) vars -> . vars_aux
    (47) llamada -> . llamada_id LPAREN llamada_2
    (29) asignacion_id -> . ID
    (99) condicion_id -> . IF
    (125) for -> . for_init LPAREN for_exp COMMA for_exp COMMA for_exp2 for_rparen bloque for_end
    (131) while -> . while_init LPAREN super_exp rparen_while bloque while_end
    (38) vars_id -> . data_type ID
    (39) vars_aux -> . array ID vars3
    (48) llamada_id -> . ID
    (129) for_init -> . FOR
    (132) while_init -> . WHILE
    (13) data_type -> . INT
    (14) data_type -> . FLOAT
    (15) data_type -> . BOOLEAN
    (40) array -> . ARRAY LESS data_type COMMA CTE_I array_2 GREATER

    RETURN          reduce using rule 153 (empty -> .)
    END             reduce using rule 153 (empty -> .)
    ELSE            reduce using rule 153 (empty -> .)
    ID              shift and go to state 47
    DRAW            shift and go to state 22
    IF              shift and go to state 45
    FOR             shift and go to state 38
    WHILE           shift and go to state 51
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ARRAY           shift and go to state 21

    asignacion_id                  shift and go to state 35
    vars_id                        shift and go to state 17
    vars                           shift and go to state 36
    for_init                       shift and go to state 37
    vars_aux                       shift and go to state 19
    bloque                         shift and go to state 82
    array                          shift and go to state 20
    ciclo                          shift and go to state 40
    for                            shift and go to state 49
    llamada                        shift and go to state 42
    estatuto                       shift and go to state 41
    condicion                      shift and go to state 43
    while_init                     shift and go to state 44
    empty                          shift and go to state 46
    data_type                      shift and go to state 23
    accion                         shift and go to state 48
    asignacion                     shift and go to state 50
    while                          shift and go to state 52
    llamada_id                     shift and go to state 53
    condicion_id                   shift and go to state 54

state 42

    (27) estatuto -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 83


state 43

    (23) estatuto -> condicion .

    ID              reduce using rule 23 (estatuto -> condicion .)
    DRAW            reduce using rule 23 (estatuto -> condicion .)
    IF              reduce using rule 23 (estatuto -> condicion .)
    FOR             reduce using rule 23 (estatuto -> condicion .)
    WHILE           reduce using rule 23 (estatuto -> condicion .)
    INT             reduce using rule 23 (estatuto -> condicion .)
    FLOAT           reduce using rule 23 (estatuto -> condicion .)
    BOOLEAN         reduce using rule 23 (estatuto -> condicion .)
    ARRAY           reduce using rule 23 (estatuto -> condicion .)
    END             reduce using rule 23 (estatuto -> condicion .)
    RETURN          reduce using rule 23 (estatuto -> condicion .)
    ELSE            reduce using rule 23 (estatuto -> condicion .)


state 44

    (131) while -> while_init . LPAREN super_exp rparen_while bloque while_end

    LPAREN          shift and go to state 84


state 45

    (99) condicion_id -> IF .

    LPAREN          reduce using rule 99 (condicion_id -> IF .)


state 46

    (12) bloque -> empty .

    END             reduce using rule 12 (bloque -> empty .)
    ELSE            reduce using rule 12 (bloque -> empty .)
    RETURN          reduce using rule 12 (bloque -> empty .)


state 47

    (106) accion -> ID . POINT accion_nombre accion_params SEMICOLON
    (29) asignacion_id -> ID .
    (48) llamada_id -> ID .

    POINT           shift and go to state 85
    LBRACKET        reduce using rule 29 (asignacion_id -> ID .)
    EQUAL           reduce using rule 29 (asignacion_id -> ID .)
    LPAREN          reduce using rule 48 (llamada_id -> ID .)


state 48

    (25) estatuto -> accion .

    ID              reduce using rule 25 (estatuto -> accion .)
    DRAW            reduce using rule 25 (estatuto -> accion .)
    IF              reduce using rule 25 (estatuto -> accion .)
    FOR             reduce using rule 25 (estatuto -> accion .)
    WHILE           reduce using rule 25 (estatuto -> accion .)
    INT             reduce using rule 25 (estatuto -> accion .)
    FLOAT           reduce using rule 25 (estatuto -> accion .)
    BOOLEAN         reduce using rule 25 (estatuto -> accion .)
    ARRAY           reduce using rule 25 (estatuto -> accion .)
    END             reduce using rule 25 (estatuto -> accion .)
    RETURN          reduce using rule 25 (estatuto -> accion .)
    ELSE            reduce using rule 25 (estatuto -> accion .)


state 49

    (104) ciclo -> for .
